--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,12 +26,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
       - name: Deploy to Production Server
         uses: appleboy/ssh-action@v1.2.0
         with:
@@ -40,6 +34,10 @@ jobs:
           key: ${{ secrets.PROD_SSH_KEY }}
           script: |
             cd /var/www/ProductionAnalisysConfiguration
+
+            echo "Logging in to Docker Hub..."
+            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+            
             cat <<EOF > .env
             DB_CONNECTION=${{ secrets.DB_CONNECTION }}
             BACKEND_EXTERNAL_PORT=${{ secrets.BACKEND_EXTERNAL_PORT }}
